syntax = "proto3";

package todo.v1;

option go_package = "./todo";

import "google/protobuf/timestamp.proto";

// Priority enum matches the Go Priority type
enum Priority {
  PRIORITY_UNSPECIFIED = 0;
  PRIORITY_LOW = 1;
  PRIORITY_MEDIUM = 2;
  PRIORITY_HIGH = 3;
}

// Todo message matches the Go Todo struct
message Todo {
  string id = 1;
  string title = 2;
  Priority priority = 3;
  bool completed = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

// Request/Response messages
message CreateTodoRequest {
  string title = 1;
}

message CreateTodoResponse {
  Todo todo = 1;
}

message GetTodoRequest {
  string id = 1;
}

message GetTodoResponse {
  Todo todo = 1;
}

message GetTodosRequest {}

message GetTodosResponse {
  repeated Todo todos = 1;
}

message UpdateTodoRequest {
  string id = 1;
  string title = 2;
}

message UpdateTodoResponse {
  Todo todo = 1;
}

message DeleteTodoRequest {
  string id = 1;
}

message DeleteTodoResponse {}

// TodoService defines the gRPC service
service TodoService {
  rpc CreateTodo(CreateTodoRequest) returns (CreateTodoResponse) {}
  rpc GetTodo(GetTodoRequest) returns (GetTodoResponse) {}
  rpc GetTodos(GetTodosRequest) returns (GetTodosResponse) {}
  rpc UpdateTodo(UpdateTodoRequest) returns (UpdateTodoResponse) {}
  rpc DeleteTodo(DeleteTodoRequest) returns (DeleteTodoResponse) {}
}